--- a/styles/cartSlider.css
+++ b/styles/cartSlider.css
@@ -13,9 +13,13 @@
   z-index: 99999999 !important;
 }
 section.cart-drawer__items {
-  height: calc(70vh - 56px - 256px);
+  height: 70vh;
   overflow: auto;
   position: relative;
+}
+
+.js-cart-trigger {
+  cursor: pointer;
 }
 
 .cart-drawer * {
@@ -45,7 +49,7 @@ section.cart-drawer__items {
   /* Safari and Chrome */
   appearance: none;
   transition: 0.3s;
-  font-family: 'FSKim';
+  font-family: "FSKim";
   font-weight: 700;
 }
 
@@ -112,7 +116,7 @@ section.cart-drawer__items {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 99;
+  z-index: 99999;
   display: flex;
   justify-content: flex-end;
   transition: 0.3s;
@@ -121,6 +125,7 @@ section.cart-drawer__items {
 }
 
 .cart-drawer.active {
+  background-color: rgba(55, 56, 149, 0.7) !important;
   visibility: visible;
   opacity: 1;
 }
@@ -170,7 +175,8 @@ section.cart-drawer__items {
 }
 
 .cart-drawer .cart-drawer__title {
-  font-family: 'ModernEraTRIAL-Bold' !important;
+  font-family: "Modern Era" !important;
+  font-weight: 700;
   font-size: 18px;
   line-height: 22px;
   text-transform: uppercase;
@@ -227,7 +233,8 @@ section.cart-drawer__items {
 }
 
 .cart-drawer .cart-drawer__empty-message {
-  font-family: 'ModernEraTRIAL-Bold' !important;
+  font-family: "Modern Era" !important;
+  font-weight: 700;
   font-size: 20px;
   line-height: 32px;
   color: #373895;
@@ -236,7 +243,7 @@ section.cart-drawer__items {
 
 .cart-drawer .cart-drawer__footer {
   border-top: 1px solid #2d2c78;
-  padding: 16px 24px 24px;
+  padding: 8px 24px 24px;
   height: 128px;
   margin-top: auto;
 }
@@ -249,7 +256,8 @@ section.cart-drawer__items {
 }
 
 .cart-drawer .cart-drawer__subtotal-text {
-  font-family: 'ModernEraTRIAL-Bold' !important;
+  font-family: "Modern Era" !important;
+  font-weight: 700;
   font-size: 18px;
   line-height: 23px;
   letter-spacing: 2.5px;
@@ -258,7 +266,8 @@ section.cart-drawer__items {
 }
 
 .cart-drawer .cart-drawer__subtotal-price {
-  font-family: 'ModernEraTRIAL-Bold' !important;
+  font-family: "Modern Era" !important;
+  font-weight: 700;
   font-size: 18px;
   line-height: 22px;
   letter-spacing: 2.5px;
@@ -281,7 +290,8 @@ section.cart-drawer__items {
   padding: 0.5px 10px;
   letter-spacing: 1.75px;
   text-transform: uppercase;
-  font-family: 'ModernEraTRIAL-Bold' !important;
+  font-weight: 700;
+  font-family: "Modern Era" !important;
 }
 .cart-drawer .cart-drawer-item {
   position: relative;
@@ -310,7 +320,8 @@ section.cart-drawer__items {
 }
 
 .cart-drawer .cart-drawer-item__title {
-  font-family: 'ModernEraTRIAL-Bold' !important;
+  font-family: "Modern Era" !important;
+  width: 70%;
   font-weight: 700;
   font-size: 18px;
   line-height: 22px;
@@ -319,12 +330,12 @@ section.cart-drawer__items {
 }
 
 .cart-drawer .cart-drawer-item__subtitle {
-  font-family: 'CircularStd';
+  font-family: "Modern Era" !important;
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
-  color: #727272;
-  display: none;
+  opacity: 0.7;
+  color: #208BB9;
 }
 
 .cart-drawer .cart-drawer-item__footer {
@@ -346,7 +357,8 @@ section.cart-drawer__items {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: 'ModernEraTRIAL-Bold' !important;
+  font-family: "Modern Era" !important;
+  font-weight: 700;
   font-size: 18px;
   line-height: 22px;
   color: #373895;
@@ -371,7 +383,8 @@ section.cart-drawer__items {
 }
 
 .cart-drawer .cart-drawer-item__price-retail {
-  font-family: 'ModernEraTRIAL-Bold' !important;
+  font-family: "Modern Era" !important;
+  font-weight: 700;
   font-size: 14px;
   line-height: 18px;
   letter-spacing: 0.5px;
@@ -380,10 +393,11 @@ section.cart-drawer__items {
 }
 
 .cart-drawer .cart-drawer-item__price-list {
-  font-family: 'ModernEraTRIAL-Regular' !important;
+  font-family: "Modern Era" !important;
+  font-weight: 400;
   font-size: 12px;
   line-height: 18px;
-  color: #2D2C78;
+  color: #2d2c78;
   margin-right: 9px;
   text-decoration: line-through;
 }
@@ -396,7 +410,8 @@ section.cart-drawer__items {
   top: 20px;
   color: #2d2c78;
   text-decoration: underline;
-  font-family: 'ModernEraTRIAL-Regular' !important;
+  font-family: "Modern Era" !important;
+  font-weight: 400;
   letter-spacing: 0.5px;
   font-size: 12px;
   line-height: 18px;
@@ -441,16 +456,16 @@ section.cart-drawer__items {
   .cart-drawer .cart-drawer-item__title {
     font-size: 18px;
     line-height: 22px;
-    height: 44px;
     margin-bottom: 8px;
   }
   .cart-drawer .cart-drawer__items {
-    height: calc(70vh - 56px - 326px);
+    height: 70vh;
     overflow: auto;
     margin-bottom: -1px;
   }
   .cart-drawer .cart-drawer-item__price-retail {
-    font-family: 'ModernEraTRIAL-Bold' !important;
+    font-family: "Modern Era" !important;
+    font-weight: 700;
     font-size: 14px;
     line-height: 18px;
     letter-spacing: 0.5px;
@@ -461,10 +476,10 @@ section.cart-drawer__items {
     margin-right: 16px;
   }
 }
-@media (max-width: 640px) {
+@media (max-width: 767px) {
   #cart-upsell .upsell-item {
-      padding: 16px;
-      width: 346px;
+    padding: 16px;
+    width: 346px;
   }
   .cart-drawer .cart-drawer__footer {
     border-top: 1px solid #2d2c78;
@@ -474,19 +489,19 @@ section.cart-drawer__items {
     position: fixed;
     bottom: 0;
     width: 100%;
-}
+  }
   section.cart-drawer__items {
     height: calc(100%);
     overflow: auto;
     position: relative;
-}
+  }
   .cart-drawer__content {
     height: 100%;
     display: flex;
     flex-direction: column;
     height: calc(100% - 129px - 56px);
-}
+  }
   .cart-drawer .cart-drawer-item:last-of-type {
-   border-bottom: 0; 
+    border-bottom: 0;
   }
 }
