--- a/styles/shop.css
+++ b/styles/shop.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 .shop-custom {
   z-index: 9999 !important;
 }
@@ -7,6 +14,7 @@
 }
 
 .transition {
+  -o-transition: opacity 1s ease-in-out;
   transition: opacity 1s ease-in-out;
   -moz-transition: opacity 1s ease-in-out;
   -webkit-transition: opacity 1s ease-in-out;
@@ -27,14 +35,22 @@
 .shop-custom.scrolled-past .shop-custom-sticky {
   width: 100vw;
   position: fixed;
-  bottom: 30dvh;
+  bottom: 0;
   left: 0;
   height: 3.5rem !important;
   gap: 15%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   padding: 0.5rem 0.5rem;
   border-top: 1px solid #8291ee;
   background: white;
@@ -64,7 +80,9 @@
   width: 6.1875rem;
   height: 2.5rem;
   padding: 0.25rem 0.375rem;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 0.75rem;
 }
 
@@ -73,7 +91,8 @@
   height: 2.5rem;
   padding: 0.625rem 1.5rem;
   gap: 0.375rem;
-  flex-shrink: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
 
 .shop-custom.scrolled-past .shop-custom-footer__shipping {
@@ -85,6 +104,8 @@
 }
 .shop-custom-footer__shipping,
 .shop-custom-footer__afterpay {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 9px;
   color: #2d2c78;
@@ -92,8 +113,12 @@
 }
 
 .shop-custom.scrolled-past .shop-custom-option__title-swatch {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .shop-custom.scrolled-past .afterpay-statement {
@@ -116,15 +141,20 @@
 }
 
 .shop-custom-option__values {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   padding: 10px;
   gap: 9px;
   position: relative;
 }
 .shop-custom.scrolled-past .shop-custom-option__values {
   gap: 8.5px;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .shop-custom.scrolled-past .shop-custom-options {
   height: auto;
@@ -138,8 +168,12 @@
 }
 
 .shop-custom.scrolled-past .shop-custom-option__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 0;
   padding-right: 10px;
   padding-left: 10px;
@@ -169,14 +203,24 @@
     content: "❯";
     font-size: 12px;
     line-height: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    transform: rotate(270deg);
-    align-items: center;
-    justify-content: center;
+    -webkit-transform: rotate(270deg);
+        -ms-transform: rotate(270deg);
+            transform: rotate(270deg);
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     top: 6px;
   }
   .shop-custom-option.color.active .shop-custom-option__title::after {
-    transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+        -ms-transform: rotate(90deg);
+            transform: rotate(90deg);
   }
 }
 
@@ -223,6 +267,8 @@
   }
 
   .shop-custom-option__title {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
     display: flex !important;
   }
   .shop-custom.scrolled-past .shop-custom-option__title-swatch {
@@ -260,57 +306,75 @@
     gap: 25px;
     max-width: none;
     bottom: 3.67rem !important;
-    transform: translateX(-15dvw);
+    -webkit-transform: translateX(-15dvw);
+        -ms-transform: translateX(-15dvw);
+            transform: translateX(-15dvw);
     padding-left: 1rem;
   }
 
   .shop-custom.scrolled-past .shop-custom-sticky {
     gap: 0%;
     height: 4.5rem !important;
-    align-items: start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
     padding-left: 0.75rem;
   }
 }
 
 @media (min-width: 480px) and (max-width: 500px) {
   .shop-custom.scrolled-past .shop-custom-option__values {
-    transform: translateX(-9dvw);
+    -webkit-transform: translateX(-9dvw);
+        -ms-transform: translateX(-9dvw);
+            transform: translateX(-9dvw);
   }
 }
 
 @media (min-width: 501px) and (max-width: 550px) {
   .shop-custom.scrolled-past .shop-custom-option__values {
-    transform: translateX(-10dvw);
+    -webkit-transform: translateX(-10dvw);
+        -ms-transform: translateX(-10dvw);
+            transform: translateX(-10dvw);
   }
 }
 
 @media (min-width: 551px) and (max-width: 600px) {
   .shop-custom.scrolled-past .shop-custom-option__values {
-    transform: translateX(-11dvw);
+    -webkit-transform: translateX(-11dvw);
+        -ms-transform: translateX(-11dvw);
+            transform: translateX(-11dvw);
   }
 }
 
 @media (min-width: 601px) and (max-width: 640px) {
   .shop-custom.scrolled-past .shop-custom-option__values {
-    transform: translateX(-12dvw);
+    -webkit-transform: translateX(-12dvw);
+        -ms-transform: translateX(-12dvw);
+            transform: translateX(-12dvw);
   }
 }
 
 @media (min-width: 641px) and (max-width: 675px) {
   .shop-custom.scrolled-past .shop-custom-option__values {
-    transform: translateX(-13dvw);
+    -webkit-transform: translateX(-13dvw);
+        -ms-transform: translateX(-13dvw);
+            transform: translateX(-13dvw);
   }
 }
 
 @media (min-width: 676px) and (max-width: 700px) {
   .shop-custom.scrolled-past .shop-custom-option__values {
-    transform: translateX(-14dvw);
+    -webkit-transform: translateX(-14dvw);
+        -ms-transform: translateX(-14dvw);
+            transform: translateX(-14dvw);
   }
 }
 
 @media (min-width: 700px) and (max-width: 767px) {
   .shop-custom.scrolled-past .shop-custom-option__values {
-    transform: translateX(-15dvw);
+    -webkit-transform: translateX(-15dvw);
+        -ms-transform: translateX(-15dvw);
+            transform: translateX(-15dvw);
   }
 }
 
@@ -318,7 +382,9 @@
   .shop-custom.scrolled-past .shop-custom-option__values {
     width: 106dvw !important;
     gap: 15px !important;
-    transform: translateX(-3rem) !important;
+    -webkit-transform: translateX(-3rem) !important;
+        -ms-transform: translateX(-3rem) !important;
+            transform: translateX(-3rem) !important;
   }
 
   .shop-custom.scrolled-past .shop-custom-sticky {
@@ -349,8 +415,12 @@
 }
 
 .shop-custom-submit__available {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 4px;
 }
 
@@ -370,13 +440,20 @@
   }
 }
 .shop-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 20px;
 }
 @media (max-width: 767px) {
   .shop-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     gap: 32px;
     padding-left: 0;
     /* height: 1550px; */
@@ -402,8 +479,12 @@
 }
 @media (max-width: 767px) {
   .shop-custom-option__title {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 .shop-custom-option__value {
@@ -414,9 +495,15 @@
   width: 40px;
   height: 40px;
   cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   background: transparent;
 }
 @media (max-width: 767px) {
@@ -426,7 +513,9 @@
   }
   .shop-custom-option__values {
     gap: 24px;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 .shop-custom-option__value div {
@@ -489,16 +578,27 @@
 }
 
 .shop-custom-footer__action {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   gap: 12px;
 }
 
 @media (max-width: 767px) {
   .shop-custom-footer__action {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     gap: 8px;
   }
 }
@@ -517,10 +617,19 @@
   }
 }
 .shop-custom__atc {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex: 1;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   gap: 8px;
   margin-bottom: 100px;
 }
@@ -540,21 +649,31 @@
 .shop-custom-quantity {
   width: 100px;
   height: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 12px;
   border: 2px solid #373895;
   border-radius: 100px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 @media (max-width: 767px) {
   .shop-custom-quantity {
     width: 320px;
     height: 40px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-around;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
     gap: 82px;
   }
 }
@@ -592,6 +711,8 @@
 
 .shop-custom-footer__shipping,
 .shop-custom-footer__afterpay {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 9px;
   color: #2d2c78;
