--- a/styles/shop.css
+++ b/styles/shop.css
@@ -37,13 +37,13 @@
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   padding: 0.5rem 0.5rem;
   border-top: 1px solid #8291ee;
   background: white;
@@ -74,8 +74,8 @@
   height: 2.5rem;
   padding: 0.25rem 0.375rem;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   gap: 0.75rem;
 }
 
@@ -85,7 +85,7 @@
   padding: 0.625rem 1.5rem;
   gap: 0.375rem;
   -ms-flex-negative: 0;
-      flex-shrink: 0;
+  flex-shrink: 0;
 }
 
 .shop-custom.scrolled-past .shop-custom-footer__shipping {
@@ -110,8 +110,8 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .shop-custom.scrolled-past .afterpay-statement {
@@ -125,7 +125,6 @@
   background: #f6f5fd;
   padding: 20px 24px;
   border-radius: 20px;
-  width: 80vw;
   max-width: 100vw;
   z-index: 9999;
 }
@@ -139,7 +138,7 @@
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   padding: 10px;
   gap: 9px;
   position: relative;
@@ -147,8 +146,8 @@
 .shop-custom.scrolled-past .shop-custom-option__values {
   gap: 8.5px;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 .shop-custom.scrolled-past .shop-custom-options {
   height: auto;
@@ -166,8 +165,8 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   margin: 0;
   padding-right: 10px;
   padding-left: 10px;
@@ -176,6 +175,18 @@
 
 .shop-custom-option__values-close {
   display: none !important;
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .shop-custom-footer {
+    width: 36.5rem;
+  }
+}
+
+@media (max-width: 991px) {
+  .shop-custom-option.active .shop-custom-option__values {
+    width: 80vw;
+  }
 }
 
 @media (min-width: 768px) {
@@ -201,20 +212,20 @@
     display: -ms-flexbox;
     display: flex;
     -webkit-transform: rotate(270deg);
-        -ms-transform: rotate(270deg);
-            transform: rotate(270deg);
+    -ms-transform: rotate(270deg);
+    transform: rotate(270deg);
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     top: 6px;
   }
   .shop-custom-option.color.active .shop-custom-option__title::after {
     -webkit-transform: rotate(90deg);
-        -ms-transform: rotate(90deg);
-            transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
   }
 }
 
@@ -245,7 +256,6 @@
     padding-top: 0 !important;
   }
 }
-
 
 @media (max-width: 767px) {
   /* .shop-custom.scrolled-past .shop-custom-option__change {
@@ -309,8 +319,8 @@
     max-width: none;
     bottom: 3.67rem !important;
     -webkit-transform: translateX(-15dvw);
-        -ms-transform: translateX(-15dvw);
-            transform: translateX(-15dvw);
+    -ms-transform: translateX(-15dvw);
+    transform: translateX(-15dvw);
     padding-left: 1rem;
   }
 
@@ -318,8 +328,8 @@
     gap: 0%;
     height: 4.5rem !important;
     -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: start;
+    -ms-flex-align: start;
+    align-items: start;
     padding-left: 0.75rem;
   }
 }
@@ -327,56 +337,56 @@
 @media (min-width: 480px) and (max-width: 500px) {
   .shop-custom.scrolled-past .shop-custom-option__values {
     -webkit-transform: translateX(-9dvw);
-        -ms-transform: translateX(-9dvw);
-            transform: translateX(-9dvw);
+    -ms-transform: translateX(-9dvw);
+    transform: translateX(-9dvw);
   }
 }
 
 @media (min-width: 501px) and (max-width: 550px) {
   .shop-custom.scrolled-past .shop-custom-option__values {
     -webkit-transform: translateX(-10dvw);
-        -ms-transform: translateX(-10dvw);
-            transform: translateX(-10dvw);
+    -ms-transform: translateX(-10dvw);
+    transform: translateX(-10dvw);
   }
 }
 
 @media (min-width: 551px) and (max-width: 600px) {
   .shop-custom.scrolled-past .shop-custom-option__values {
     -webkit-transform: translateX(-11dvw);
-        -ms-transform: translateX(-11dvw);
-            transform: translateX(-11dvw);
+    -ms-transform: translateX(-11dvw);
+    transform: translateX(-11dvw);
   }
 }
 
 @media (min-width: 601px) and (max-width: 640px) {
   .shop-custom.scrolled-past .shop-custom-option__values {
     -webkit-transform: translateX(-12dvw);
-        -ms-transform: translateX(-12dvw);
-            transform: translateX(-12dvw);
+    -ms-transform: translateX(-12dvw);
+    transform: translateX(-12dvw);
   }
 }
 
 @media (min-width: 641px) and (max-width: 675px) {
   .shop-custom.scrolled-past .shop-custom-option__values {
     -webkit-transform: translateX(-13dvw);
-        -ms-transform: translateX(-13dvw);
-            transform: translateX(-13dvw);
+    -ms-transform: translateX(-13dvw);
+    transform: translateX(-13dvw);
   }
 }
 
 @media (min-width: 676px) and (max-width: 700px) {
   .shop-custom.scrolled-past .shop-custom-option__values {
     -webkit-transform: translateX(-14dvw);
-        -ms-transform: translateX(-14dvw);
-            transform: translateX(-14dvw);
+    -ms-transform: translateX(-14dvw);
+    transform: translateX(-14dvw);
   }
 }
 
 @media (min-width: 700px) and (max-width: 767px) {
   .shop-custom.scrolled-past .shop-custom-option__values {
     -webkit-transform: translateX(-15dvw);
-        -ms-transform: translateX(-15dvw);
-            transform: translateX(-15dvw);
+    -ms-transform: translateX(-15dvw);
+    transform: translateX(-15dvw);
   }
 }
 
@@ -384,9 +394,9 @@
   .shop-custom.scrolled-past .shop-custom-option__values {
     width: 106dvw !important;
     gap: 15px !important;
-    -webkit-transform: translateX(-3rem) !important;
-        -ms-transform: translateX(-3rem) !important;
-            transform: translateX(-3rem) !important;
+    -webkit-transform: translateX(-2rem) !important;
+    -ms-transform: translateX(-2rem) !important;
+    transform: translateX(-2rem) !important;
   }
 
   .shop-custom.scrolled-past .shop-custom-sticky {
@@ -422,8 +432,8 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   gap: 4px;
 }
 
@@ -455,8 +465,8 @@
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     gap: 32px;
     padding-left: 0;
     /* height: 1550px; */
@@ -486,8 +496,8 @@
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
   }
 }
 .shop-custom-option__value {
@@ -502,11 +512,11 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   background: transparent;
 }
 @media (max-width: 767px) {
@@ -517,8 +527,8 @@
   .shop-custom-option__values {
     gap: 24px;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
   }
 }
 .shop-custom-option__value div {
@@ -585,8 +595,8 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
   gap: 12px;
 }
 
@@ -597,11 +607,11 @@
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     gap: 8px;
   }
 }
@@ -625,14 +635,14 @@
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -ms-flex: 1;
+  flex: 1;
   gap: 8px;
   margin-bottom: 100px;
 }
@@ -656,16 +666,16 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   gap: 12px;
   border: 2px solid #373895;
   border-radius: 100px;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 @media (max-width: 767px) {
@@ -676,7 +686,7 @@
     display: -ms-flexbox;
     display: flex;
     -ms-flex-pack: distribute;
-        justify-content: space-around;
+    justify-content: space-around;
     gap: 82px;
   }
 }
